separated classes into different files

--- a/PatientRecordApplication/PatientRecordApplication/PatientRecordApplication.csproj
+++ b/PatientRecordApplication/PatientRecordApplication/PatientRecordApplication.csproj
@@ -44,11 +44,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Functions.cs" />
+    <Compile Include="ListPatientData.cs" />
+    <Compile Include="MinBalanceDue.cs" />
+    <Compile Include="Patientclass.cs" />
     <Compile Include="PatientRecordSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpecificPatient.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
